Added a module which uses mueval for evaluating haskell.

--- a/elysia.ini
+++ b/elysia.ini
@@ -5,7 +5,7 @@ real = Elysia Chlorotica Bot
 [server]
 address = irc.freenode.net
 port    = 6667
-chans   = #(), #HSBotTest
+chans   = #(), #HSBotTest, ##XAMPP
 
 [server1]
 address = onyx.ninthbit.net
