|quit now checks whether the user executing it has admin rights.

--- a/src/elysia.ini
+++ b/src/elysia.ini
@@ -2,12 +2,17 @@ nick = ElysiaBot
 user = Elysia
 real = Elysia Chlorotica Bot
 
-[server]
-address = irc.freenode.net
-port    = 6667
-chans   = #(), #HSBotTest, ##XAMPP
+;[server]
+;address = irc.freenode.net
+;port    = 6667
+;chans   = #(), #HSBotTest, ##XAMPP
 
-[server1]
-address = onyx.ninthbit.net
+;[server1]
+;address = onyx.ninthbit.net
+;port    = 6667
+;chans   = #bots
+
+[server2]
+address = amber.ninthbit.net
 port    = 6667
 chans   = #bots
