Added a way to mute modules in specific channels.

--- a/src/elysia.ini
+++ b/src/elysia.ini
@@ -2,10 +2,10 @@ nick = ElysiaBot
 user = Elysia
 real = Elysia Chlorotica Bot
 
-;[server]
-;address = irc.freenode.net
-;port    = 6667
-;chans   = #(), #HSBotTest, ##XAMPP
+[server]
+address = irc.freenode.net
+port    = 6667
+chans   = #()
 
 ;[server1]
 ;address = onyx.ninthbit.net
@@ -15,4 +15,4 @@ real = Elysia Chlorotica Bot
 [server2]
 address = amber.ninthbit.net
 port    = 6667
-chans   = #bots
+chans   = #bots, #programming
