Added a pidfile option to the config file. Added -S flag which stops the elysia that is running in the background.

--- a/src/elysia.ini
+++ b/src/elysia.ini
@@ -1,6 +1,8 @@
-nick = ElysiaBot
+nick = ElysiaBot-dev
 user = Elysia
 real = Elysia Chlorotica Bot
+
+pidfile = ElysiaBot.pid
 
 [server]
 address = irc.freenode.net
