Added a way to wait for the response to a request in PluginUtils. Added two plugin commands to Commands.hs, |desc and |plugins, and the Plugin's config file is now read.

--- a/src/Plugins/TestPlugin/TestPlugin.ini
+++ b/src/Plugins/TestPlugin/TestPlugin.ini
@@ -1,5 +1,6 @@
-name        = "TestPlugin"
-description = "Plugin for testing."
+name        = TestPlugin
+description = Plugin for testing.
 depends     = []
 protocol    = 1
+language    = haskell
 
